--- a/src/styles/ui/menu.module.css
+++ b/src/styles/ui/menu.module.css
@@ -63,6 +63,10 @@
     color: var(--color-foreground)
 }
 
+.rightIcons > :nth-child(2) {
+    padding: 0;
+}
+
 .rightIcons > :nth-child(3) {
     padding: 0 var(--space-sm);
 
